Refactor exceptions, tests, and product entity.
Renamed exception message constants for clarity and consistency. Updated test methods and mock setups with generalized `ArgumentMatchers` for improved flexibility. Refactored `ProductEntity` to implement `Serializable` and streamlined `Product` class by removing unused setters. Simplified DTO and test classes by leveraging Java 16+ features.